added funcationality to navbar

--- a/src/components/Data/projects.json
+++ b/src/components/Data/projects.json
@@ -4,6 +4,6 @@
     "title": "My Portfolio",
     "imageSrc": "projects/proj.png",
     "description": "Created and Deployed My Portfolio using React Js.",
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "demo": "",
+    "source": "https://github.com/the-miist/My-Portfolio.git"
   }]
